# demande

./: .gitignore  .~lock.conditional-density-estimation.csv#  README.md  Untitled.ipynb  \  conditional-density-estimation.csv  data.dvc  environment.yaml  jupyterlab  original_data_2d.png.xmp  pyproject.toml
.dvc/: config
experiments/: initialization.py  mlflow_neural_flow_experiments.py  mlflow_neural_flow_gmm_experiments.py  mlflow_plot_gmm.py  mlflow_plot_spatial_gmm.py  mlflow_two_dimensions_checkpoint_experiments.py  mlflow_two_dimensions_experiments.py
experiments/dmkde/: dmkde.py  dmkde_best.py
experiments/dmkde_sgd/: dmkde_sgd.py  dmkde_sgd_best.py  run_all_best.sh
experiments/generate_potential/: generate_potential_2.py  generate_potential_3.py
experiments/gmm/: dmkde.py  dmkde_best.py  dmkde_sgd.py  dmkde_sgd_best.py  inverse_maf.py  inverse_maf_best.py  made.py  made_best.py  neural_splines.py  neural_splines_best.py  planar_flow.py  planar_flow_best.py  run_all_best.sh
notebooks/: dmkde_training.ipynb  graph_plots_paper.ipynb  initialization.py  mlflow_neural_flow_experiments.py  mlflow_neural_flow_gmm_experiments.py  mlflow_plot_gmm.py  mlflow_plot_spatial_gmm.py  mlflow_two_dimensions_checkpoint_experiments.py  mlflow_two_dimensions_experiments.py  square_kernel_comparisons.ipynb
tests/: test_load_arc.py  test_load_bimodal_l.py  test_load_binomial.py  test_load_potential_1.py  test_load_potential_2.py  test_load_potential_3.py  test_load_potential_4.py  test_load_spatial_gmm.py  test_load_star_eight.py  test_load_swiss_roll.py
(+180 files in other folders)
