[project]
name = "demande"
version = "0.1.0"
description = "Density Matrix Neural Density Estimation"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Joseph Gallego",     email = "joaggi@gmail.com"},
    {name = "Fabio Gonzalez",     email = "fagonzalezo@unal.edu.co"},
]
keywords = ["density estimation", "quantum machine learning", "deep learning", "kernel methods"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Quantum Machine Learning",
]


[tool.pyright]
include = [
       "notebooks",
       "scripts",
       "submodules"
]
venvPath = "~/.cache/pypoetry/virtualenvs/"
venv = "2021-02-conditional-density-estimation-81fTIEwr-py3.9"

[tool.pytest.ini_options]
minversion = "6.0"
pythonpath = "src/"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
#filterwarnings = ["error"]
log_cli_level = "info"
testpaths = [
    "tests"
]
